# AppIconAdder

./: CMakeLists.txt  FinalPage.qml  Main.qml  SelectApplication.qml  SelectIcon.qml  StyleButton.qml  main.cpp  manager.cpp  manager.h
